force-app/main/default/objects/ImportOrderLocation__c/ImportOrderLocation__c.object-meta.xml
<CustomObject>
    <label>Import Order Location</label>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Location Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Order Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>