force-app/main/default/objects/ImportOrderLocation__c/fields/KlopotekId__c.field-meta.xml
<CustomField>
    <fullName>KlopotekId__c</fullName>
    <label>Klopotek Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>