force-app/main/default/objects/ImportOrderLocation__c/fields/StandardDeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>StandardDeliveryAddress__c</fullName>
    <label>Standard Delivery Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>