force-app/main/default/objects/ImportOrderLocation__c/fields/StandardInvoiceAddress__c.field-meta.xml
<CustomField>
    <fullName>StandardInvoiceAddress__c</fullName>
    <label>Standard Invoice Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>